dps public school

--- a/customers.html
+++ b/customers.html
@@ -430,7 +430,7 @@
 					  </tr>
 					 </tr>
 					   <tr class="dark">
-						<td>25. <a href='http://103.233.24.31:8223/Master/Login.aspx'>Bubble Wash LLP </a>
+						<td>25. <a href='http://103.233.24.31:8334/Master/Login.aspx'>DPS Public School </a>
 						<BR> &nbsp;&nbsp;&nbsp;&nbsp;<BR>&nbsp;&nbsp;&nbsp;&nbsp;</td>  
 					  </tr>
 					 
